# betula

./: .directory  .gitignore  BUG_HUNTING  CNAME  Dockerfile  Dockerfile.core  Dockerfile.website  INSTALL  LICENSE  Makefile  README  README.md  ads.txt  calc.lex  calc.yacc  config.h  dependencies-alpine.list  dependencies.list  dependencies.termux  dlang.mk  faq.html  gen-control.sh  index.html  index.pt.html  install-alire.sh  install-site.sh  interpreter-d.d  interpreter.c  interpreter.h  interpreter_d.d  jit.c  jit.h  kv.c  linker.c  linker.h  linker_d.d  list_d.d  log.xsl  memory.h  news.sh  (+27 more)
.github/workflows/: build-static.yml  build.yml  release-static.yml  release.yml  templatizer.yml
actions/templatizer/: action.yml
actions/templatizer-static/: action.yml
apps/: Makefile
apps/quick-cloud/: Makefile  index.pt.tmpl  layout.css
apps/sysinfo/: Makefile  sysinfo.en.tmpl
conf/: betula-ssl.conf  betula.conf  gcloud-betula-ssl.conf  gcloud-betula.conf  sysinfo.conf.original  templatizer.conf.original
debian/: control  postinst
include/: templatizer.h  yeast.h
include/pollen/: percent.h  pollen.h  pollen.tmpls  storage.h  stream.h  system.h  virt.h
include/templatizer/: cookie.h  http.h  json.h  percent.h  query.h  stream.h  templatizer.h
libpollen/: Makefile  percent.c  query.c  sanity.c  sql.c  storage.c  stream.c  system.c  virt.c
libtemplatizer/: Makefile  cookie.c  http.c  json.c  percent.c  query.c  stream.c
man/: percent.man  query.man  url.man
plugins/: Makefile
plugins/app/: Makefile  dating.d  inetaddr.c  nslookup.d
plugins/codegen/: Makefile  cd_i386.c  codegen_c.c  llvm.c
plugins/database/: Makefile  kv.c
plugins/input/: Makefile  false.c  helloworld.c  helloworld_d.d  null.c  (+5 more)
plugins/input/betula-xml-rs/: Cargo.toml  Makefile  index.tmpl
plugins/input/betula-xml-rs/src/: lib.rs
plugins/input/helloworld-rs/: Cargo.toml  Makefile
plugins/input/helloworld-rs/src/: lib.rs
po/: kv.pot
pollen-rs/: Makefile
pollen-rs/pollen/: Cargo.toml  Makefile  chacha20.adb  test1.tmp
pollen-rs/pollen-sys/: Cargo.toml
pollen-rs/pollen-sys/src/: lib.rs
pollen-rs/pollen/src/: chacha20.rs  lib.rs
runtime/: Makefile  config.h  pollenrt0.c
sponsors/: README.md
templatizer-d/: Makefile  ctype.d  percent.d  platform.d  query.d  runtime.d  safeint.c  storage.d  stream.d  templatizer.d
templatizer-rs/: Makefile
templatizer-rs/templatizer/: Cargo.toml  Makefile
templatizer-rs/templatizer/src/: lib.rs
tests/: .directory  .gitignore  Makefile  controlflow.tmpl  cookie  cookie.c  create-config.sh  echo.tmpl  include.tmpl  json.c  kv.tmpl  library.tmpl  library.xhtml  noplugin.tmpl  null.tmpl  percent.c  pipeline1.tmpl  placeholder-d.tmpl  placeholder-rs.tmpl  placeholder.tmpl  placeholder.xhtml  playground.tmpl  run-playground.sh  run-templatizer.sh  sanity.tmpl  selfclosing.tmpl  simple.tmpl  simple.xhtml  sql.tmpl  sqlite.tmpl  test.bc
yeast/: Makefile  yeast.c  yeast.h
(+26 files in other folders)
