[package]
name = "pollen-sys"
description = "Bindings for the pollen package"
license = "MIT"
version = "0.1.0"
authors = ["Mateus de Lima Oliveira <mateus@ativarsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
