[package]
name = "helloworld-rs"
version = "0.1.0"
authors = ["Mateus de Lima Oliveira <mateus@ativarsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
templatizer-sys = { path="../../../templatizer-rs/templatizer-sys", version="*" }
templatizer = { path="../../../templatizer-rs/templatizer", version="*" }

[lib]
crate-type = ["cdylib"]
